# Simbotic

ros/devel/: .catkin  .rosinstall  setup.sh
ros/devel/lib/pkgconfig/: airsim_ros.pc
ros/devel/lib/python2.7/dist-packages/airsim_ros/: __init__.py
ros/devel/share/airsim_ros/cmake/: airsim_rosConfig.cmake
ros/src/airsim_ros/: CMakeLists.txt  package.xml
ros/src/airsim_ros/scripts/: drone_image_raw.py
